[package]
name = "bfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
getopts = "0.2.21"
goblin = "0.8.0"
serde = {version = "1.0.196", features = ["derive"] }

[profile.dev]
overflow-checks = false
